--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,28 @@ html{
 .fa-raspberry-pi{
     font-size: 30px;
 }
+
+/* Speed Buttons */
+.speed-buttons {
+}
+.btn {
+    display: block;
+    margin: 10px 0;
+    margin-left: 5px;
+    padding: 2px 5px;
+    width: 120px;
+    font-size: 30px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+.btn:hover{
+    background-color: bisque;
+}
+.btn_active{
+    background-color: rgb(0, 167, 0);
+}
+.btn_active:hover{
+    background-color: rgb(0, 167, 0);
+}
+
+
