--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ html{
     text-align: center;
     font-weight: 600;
     font-size: 30px;
+    padding-right: 100px;
 }
 .playground__row {
     display: flex;
